# Coronary_Angiography_Detection

./: .gitignore  .gitmodules  README.md  arcade_standardized.json  best_trials_summary.csv  pyproject.toml  results_validation_on_sets.csv
CADICA_Detection/: __init__.py  pyproject.toml  setup.py
CADICA_Detection/dataset/: DatasetTools.py  __init__.py  augmentation.py  data_loader.py  formatting.py  holdout.py  undersampling.py  utils.py
CADICA_Detection/double_cross_validation/: CV_yolo.py  args.yaml  aux_trasform_csvs.py  create_fold_info.py  create_yolo_splits.py  cv_config.yaml  doubleCV_yolo.py  double_cv.py  double_cv_augmentation.py  execute_dcv.sh  inference.py  inference_multi_image.py  inference_multi_image_non_combined.py  inference_single_image.py  labelTesterCV.py  run_pipeline.sh  run_script.sh  try_validation_alone.py
CADICA_Detection/model/: __init__.py  bho.py  bho_config.yaml  test.py  (+5 more)
ICA_Detection/: __init__.py
docs/: TODO.md
double_cv_splits_noaugment/: integrity_check.csv  label_distribution.csv
inference/: predict.py
jupyter/: check.ipynb  pascal_yolo.txt
models/: iteration_1.pt  iteration_2.pt  simulated_annealing.pt
scripts/: CADICA_BHO.db  CADICA_dataset_pipeline.sh  DS_download_analyze_CADICA.py  apply_image_matching.py  config.yaml  config_sobremesa.yaml  generate_dataset.py  generate_images_cadica_work.ipynb  goal_oriented_sensibility_study.py  jupyter.ipynb  notes.md  optuna_trial.py  prepare_CADICA_dataset.py  preproc_performance.py  see_images.ipynb  tables.py  test.sh  test_by_labels.py  tpe_tuning_analysis.py  visualizations.py  visualize_arcade_annotations.py
(+236 files in other folders)
